--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "electron-vue-vite",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "main": "dist-electron/main/index.js",
-  "description": "Really simple Electron + Vue + Vite boilerplate.",
-  "author": "草鞋没号 <308487730@qq.com>",
+  "description": "Smart POS crossplatform APP.",
+  "author": "Samuel Mpwanyi",
   "license": "MIT",
   "private": true,
   "keywords": [
