--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -2,7 +2,7 @@
  * @see https://www.electron.build/configuration/configuration
  */
 {
-  "appId": "YourAppID",
+  "appId": "com.prodevkampala.smartpos",
   "asar": true,
   "icon": "public/favicon.ico",
   "directories": {
