--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-vue-vite",
+  "name": "smartpos",
   "version": "2.0.1",
   "main": "dist-electron/main/index.js",
   "description": "Smart POS crossplatform APP.",
@@ -10,7 +10,6 @@
     "electron",
     "rollup",
     "vite",
-    "vue3",
     "vue"
   ],
   "debug": {
@@ -24,14 +23,33 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@mdi/font": "^7.1.96",
     "@vitejs/plugin-vue": "^4.0.0",
     "electron": "^22.0.0",
     "electron-builder": "^23.6.0",
+    "sass": "^1.57.1",
     "typescript": "^4.9.4",
     "vite": "^4.0.3",
     "vite-plugin-electron": "^0.11.1",
     "vite-plugin-electron-renderer": "^0.11.4",
     "vue": "^3.2.45",
+    "vue-cli-plugin-vuetify": "~2.5.8",
     "vue-tsc": "^1.0.16"
+  },
+  "dependencies": {
+    "axios": "^0.21.0",
+    "blob-stream": "^0.1.3",
+    "core-js": "^3.6.5",
+    "date-fns": "^2.16.1",
+    "dotenv": "^16.0.1",
+    "export-to-csv": "^0.2.1",
+    "firebase": "^8.6.2",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
+    "validator": "^13.6.0",
+    "vue-meta": "^2.4.0",
+    "vue-router": "^3.2.0",
+    "vuetify": "^3.1.1",
+    "vuex": "^3.4.0"
   }
 }
