--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "core-js": "^3.6.5",
     "date-fns": "^2.16.1",
     "dotenv": "^16.0.1",
+    "electron-devtools-installer": "^3.2.0",
     "export-to-csv": "^0.2.1",
     "firebase": "^8.6.2",
     "mitt": "^3.0.0",
