--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -22,6 +22,7 @@
     "target": [
       {
         "target": "nsis",
+        "icon": "public/win/icon.ico",
         "arch": [
           "x64"
         ]
