--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,8 +20,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest, windows-latest]
-        # ubuntu-latest,
+        os: [macos-latest]
+        # ubuntu-latest, windows-latest
 
     steps:
       - name: Checkout Code
