--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vue-tsc": "^1.0.16"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^3.6.5",
     "axios": "^0.21.0",
     "blob-stream": "^0.1.3",
     "core-js": "^3.6.5",
@@ -51,6 +52,7 @@
     "validator": "^13.6.0",
     "vue-meta": "^2.4.0",
     "vue-router": "^4.0.13",
+    "vuejs-datepicker": "^1.6.2",
     "vuetify": "^3.1.1",
     "vuex": "^4.1.0"
   }
